--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,11 @@ jobs:
         with:
           repository: nightwatchjs/nightwatch-docs
 
+      - name: Delete not needed files
+        run: |
+          rm nightwatch-docs/LICENSE.md
+          rm nightwatch-docs/README.md
+
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
