--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Delete not needed files
         run: |
-          rm nightwatch-docs/LICENSE.md
-          rm nightwatch-docs/README.md
+          rm ${{ github.workspace }}/nightwatch-docs/LICENSE.md
+          rm ${{ github.workspace }}/nightwatch-docs/README.md
 
       - name: Use Node.js
         uses: actions/setup-node@v2
