--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,12 +16,14 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: nightwatchjs/nightwatch
+          path: nightwatch
 
       - name: Checkout Nightwatch docs folder
         uses: actions/checkout@v2
         with:
           repository: nightwatchjs/nightwatch-docs
           ref: versions/3.0
+          path: nightwatch-docs
 
       - name: Delete not needed files
         run: |
