--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,9 +46,9 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.PROD_DEPLOY_SECRET }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          echo "Remote server: ${{ env.REMOTE_SERVER }}"
-          ssh-keyscan ${{ env.REMOTE_SERVER }} >> ~/.ssh/known_hosts
-          rsync -azP --delete ./out/ ${{ env.REMOTE_USER }}@${{ env.REMOTE_SERVER }}:${{ secrets.REMOTE_DIRECTORY }}
+          echo "Remote server: $REMOTE_SERVER"
+          ssh-keyscan $REMOTE_SERVER >> ~/.ssh/known_hosts
+          rsync -azP --delete ./out/ $REMOTE_USER@$REMOTE_SERVER:${{ secrets.REMOTE_DIRECTORY }}
         env:
           MD_DOCS_FOLDER: ${{ github.workspace }}/nightwatch-docs
           API_DOCS_FOLDER: ${{ github.workspace }}/nightwatch/lib/api
