--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,5 +50,7 @@ jobs:
           ssh-keyscan $REMOTE_SERVER >> ~/.ssh/known_hosts
           rsync -azP --delete ./out/ $REMOTE_USER@$REMOTE_SERVER:${{ secrets.REMOTE_DIRECTORY }}
         env:
+          REMOTE_SERVER: ${{ env.REMOTE_SERVER }}
+          REMOTE_USER: ${{ env.REMOTE_USER }}
           MD_DOCS_FOLDER: ${{ github.workspace }}/nightwatch-docs
           API_DOCS_FOLDER: ${{ github.workspace }}/nightwatch/lib/api
