--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,9 +43,19 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: List API_DOCS_FOLDER
+      - name: Start server
         run: |
-          echo $API_DOCS_FOLDER
+          nohup npm start &
+          sleep 10          
+
+      - name: Run Selenium script
+        run: |
+          echo "module.exports = {
+            demoTest(browser) {
+              browser.url('http://localhost:5173').pause(5000);
+            }
+          };" > navigate.js
+          node navigate.js
 
       - name: Build the website
         run: npm run build
