--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "marked": "^4.3.0"
   },
   "devDependencies": {
-    "serve": "^14.2.0",
     "@halo-lab/stream": "Halo-Lab/stream",
+    "chromedriver": "^114.0.2",
     "eslint": "^8.32.0",
     "geckodriver": "^3.2.0",
     "nightwatch-examples": "nightwatchjs-community/nightwatch-examples",
-    "postdoc": "0.1.3"
+    "postdoc": "0.1.3",
+    "serve": "^14.2.0"
   }
 }
