--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
         run: |
           echo "module.exports = {
             demoTest(browser) {
-              browser.url('http://localhost:5173/api').pause(10000);
+              browser.url('http://localhost:5173/api').pause(5000).url('http://127.0.0.1:5173/api/element/find.html');
             }
           };" > navigate.js
           npx nightwatch navigate.js -e chrome --headless --verbose
