--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,13 +52,25 @@ jobs:
         run: |
           echo "module.exports = {
             demoTest(browser) {
-              browser.url('http://localhost:5173/api').pause(5000).url('http://127.0.0.1:5173/api/element/find.html');
+              browser.url('http://localhost:5173/api')
+                .pause(5000)
+                .url('http://127.0.0.1:5173/api/element/find.html')
+                .saveScreenshot('screens/screenshot.png');
             }
           };" > navigate.js
           npx nightwatch navigate.js -e chrome --headless --verbose
 
       - name: Show server output
         run: cat server.log
+
+      - name: Archive screenshots
+        run: zip -r screenshots.zip screens/
+
+      - name: Upload screenshots
+        uses: actions/upload-artifact@v2
+        with:
+          name: screenshots
+          path: screenshots.zip
 
       - name: List nightwatch docs
         run: cd nightwatch-docs/api/element && ls -la
