--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ jobs:
       REMOTE_USER: ${{ secrets.REMOTE_USER }}
       MD_DOCS_FOLDER: ${{ github.workspace }}/nightwatch-docs
       API_DOCS_FOLDER: ${{ github.workspace }}/nightwatch/lib/api
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -27,7 +28,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: nightwatchjs/nightwatch-docs
-          ref: versions/3.0
+          ref: versions/3.0-tmp
           path: nightwatch-docs
 
       - name: Delete not needed files
@@ -43,56 +44,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build and run Docker image
-        run: |
-          echo 'FROM node:16' > Dockerfile
-          echo 'WORKDIR /app' >> Dockerfile
-          echo 'COPY package*.json ./' >> Dockerfile
-          echo 'RUN npm install' >> Dockerfile
-          echo 'COPY . .' >> Dockerfile
-          echo 'EXPOSE 5173' >> Dockerfile
-          echo 'CMD [ "npm", "start" ]' >> Dockerfile
-          docker build -t my-image .
-          docker run -d -p 5173:5173 -v ${{ github.workspace }}:/app my-image         
-
-      - name: Run Selenium script
-        run: |
-          echo "module.exports = {
-            demoTest(browser) {
-              browser
-                .resizeWindow(1920, 1080)
-                .url('http://localhost:5173/')
-                .pause(5000)
-                .saveScreenshot('screens/index.png')
-                .url('http://localhost:5173/api')
-                .pause(5000)
-                .saveScreenshot('screens/api_page.png')
-                .url('http://localhost:5173/guide')
-                .pause(5000)
-                .saveScreenshot('screens/guide.png')
-                .url('http://localhost:5173/api/element/find.html')
-                .saveScreenshot('screens/element_page.png');
-            }
-          };" > navigate.js
-          npx nightwatch navigate.js -e chrome --headless --verbose
-
-#      - name: Show server output
-#        run: cat server.log
-
-      - name: Archive screenshots
-        run: zip -r screenshots.zip screens/
-
-      - name: Upload screenshots
-        uses: actions/upload-artifact@v2
-        with:
-          name: screenshots
-          path: screenshots.zip
-
       - name: Build the website
         run: npm run build
-
-      - name: List API_DOCS_FOLDER
-        run: cd out/api && ls -la
 
       - name: Deploy to server
         run: |
