--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,9 +49,9 @@ jobs:
 
       - name: Creating symlinks to old version
         run: |
-          ln -s ../nightwatchjs.org v17
-          ln -s ../v09.nightwatchjs.org v09
-          ln -s ../nightwatch-v26 v26
+          ln -s ../nightwatchjs.org out/v17
+          ln -s ../v09.nightwatchjs.org out/v09
+          ln -s ../nightwatch-v26 out/v26
 
       - name: Deploy to server
         run: |
@@ -59,4 +59,4 @@ jobs:
           echo "${{ secrets.PROD_DEPLOY_SECRET }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan ${{ env.REMOTE_SERVER }} >> ~/.ssh/known_hosts
-          rsync -azP --delete --copy-links ./out/ ${{ env.REMOTE_USER }}@${{ env.REMOTE_SERVER }}:${{ secrets.REMOTE_DIRECTORY }}
+          rsync -azP --delete ./out/ ${{ env.REMOTE_USER }}@${{ env.REMOTE_SERVER }}:${{ secrets.REMOTE_DIRECTORY }}
