--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "postdoc test -- test/src -o tests_output --headless",
     "start": "postdoc run",
-    "build": "postdoc build",
+    "build": "postdoc build && node build/criticalCSS.mjs",
     "eslint": "eslint src test --quiet"
   },
   "author": "Andrei Rusu <andrei@pineview.io>",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@halo-lab/stream": "Halo-Lab/stream",
     "chromedriver": "^114.0.2",
+    "critical": "^5.1.1",
     "eslint": "^8.32.0",
     "geckodriver": "^3.2.0",
     "nightwatch-examples": "nightwatchjs-community/nightwatch-examples",
