--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "isomorphic-fetch": "^3.0.0",
-    "marked": "^4.3.0"
+    "marked": "^4.3.0",
+    "swiper": "^10.0.3"
   },
   "devDependencies": {
     "@halo-lab/stream": "Halo-Lab/stream",
