--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "critical": "^5.1.1",
     "eslint": "^8.32.0",
     "geckodriver": "^3.2.0",
+    "html-minifier": "^4.0.0",
     "nightwatch-examples": "nightwatchjs-community/nightwatch-examples",
     "postdoc": "0.1.3",
     "serve": "^14.2.0"
