--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Prebuild #required ensure api pages are generated before the ejs files are processed
+        run: npm prebuild
+
       - name: Build the website
         run: npm run build
 
