--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
         run: npm install
 
       - name: Prebuild #required ensure api pages are generated before the ejs files are processed
-        run: npm prebuild
+        run: npm run prebuild
 
       - name: Build the website
         run: npm run build
