--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "devDependencies": {
     "@halo-lab/stream": "0.0.1",
     "bootstrap": "^5.3.3",
+    "critical": "^7.1.0",
     "eslint": "^8.32.0",
+    "html-minifier": "^4.0.0",
     "nightwatch-examples": "nightwatchjs-community/nightwatch-examples",
     "postdoc": "0.3.0-preview2"
   }
